fix: QueryPreview collapse icon position

--- a/src/components/QueryPreview/index.module.less
+++ b/src/components/QueryPreview/index.module.less
@@ -56,6 +56,8 @@
 }
 
 .collapseBtn {
+  position: relative;
+  top: 8px;
   text-align: center;
   border-color: #a5a5a5;
 
